tests/lambda/arg.ast.err
Error: Unexpected token in input while parsing lambda, expected ), <identifier>
   ╭─[tests/lambda/arg.scm:1:12]
   │
 1 │ (lambda (a 3.5)
   ·            ─┬─  
   ·             ╰─── Unexpected token 3.5
───╯
