tests/lambda/arg.scm
(lambda (a 3.5)
    x
)